# rr

./: README.md  pyproject.toml
app/: s2_api.py
notebooks/: 20230226-s2-api.ipynb
