[tool.poetry]
name = "rr"
version = "0.1.0"
description = ""
authors = ["Alexander Junge <alexander.junge@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.3"
torch = "1.12.1"
torchvision = "0.13.1"
torchaudio = "0.12.1"
transformers = "^4.26.1"
sacremoses = "^0.0.53"
llvmlite = "^0.39.1"
bokeh = "^3.0.3"
umap-learn = "^0.5.3"
scikit-learn = "^1.2.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.2"
pre-commit = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
